Fixed below review comments - Removed the "lineWrapping" option from the codemirror textarea because   it was creating issue in the code folding. - Handle the values while depositing during debugging. - Properly handle the Array values while saving it to sqlite database   and displayed in input dialog. - SQL code folding was not supported in codemirror so added the same.

--- a/web/pgadmin/tools/debugger/static/css/debugger.css
+++ b/web/pgadmin/tools/debugger/static/css/debugger.css
@@ -54,3 +54,32 @@
 .debugger-container .CodeMirror-activeline-background {
     background: #50B0F0;
 }
+
+.CodeMirror-foldmarker {
+  color: blue;
+  text-shadow: #b9f 1px 1px 2px, #b9f -1px -1px 2px, #b9f 1px -1px 2px, #b9f -1px 1px 2px;
+  font-family: arial;
+  line-height: .3;
+  cursor: pointer;
+}
+
+.CodeMirror, .CodeMirror-gutters {
+    min-height: 100%;
+}
+
+.CodeMirror-foldgutter {
+  width: .9em;
+}
+
+.CodeMirror-foldgutter-open,
+.CodeMirror-foldgutter-folded {
+  cursor: pointer;
+}
+
+.CodeMirror-foldgutter-open:after {
+  content: "\25BC";
+}
+
+.CodeMirror-foldgutter-folded:after {
+  content: "\25B6";
+}
